Added Music Button (Glitch)
added audio tracks and music mute/unmute button

audio tracks are only for testing:

testTrack1.mp3
testTrack2.mp3
testTrack3.mp3

For user safety, most browsers do not allow for music to be played right away so the user must be prompted to play music. Will fix this.

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -2,10 +2,34 @@
   margin-top: 1px;
   margin-bottom: 1px;
 }
-#playerList{
+#playerList {
   height: 624px; /* cant use full for height */
 }
-#chatBox{
+#chatBox {
   margin-top: -8px;
   padding-bottom: -130px;
+}
+#soundButton {
+  height: 115px;
+  width: 115px;
+  margin-bottom: 25px;
+  margin-left: 50px; 
+}
+#themeButton {
+  margin-right: 200px;
+}
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
+.navbar-left {
+  display: flex;
+  align-items: center;
+}
+.navbar-right {
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
