gutted packages, prepared deploy, fixed errors, upgraded everything

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -5,8 +5,8 @@
 
 /* Define a custom font face for the application */
 @font-face {
-  font-family: "W95FA";
-  src: url("/w95fa.woff") format("truetype");
+  font-family: 'W95FA';
+  src: url('/w95fa.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -18,7 +18,7 @@
   }
 
   html {
-    font-family: "W95FA", monospace; /* Use the custom font */
+    font-family: 'W95FA', monospace; /* Use the custom font */
     letter-spacing: 2px; /* Add spacing between letters */
     -webkit-font-smoothing: antialiased; /* Improve font rendering */
     scroll-behavior: smooth; /* Enable smooth scrolling */
@@ -27,7 +27,7 @@
 
 /* Global body styles */
 body {
-  @apply relative min-h-screen m-0 overflow-x-hidden text-gray-900 bg-white dark:text-white dark:bg-gray-900;
+  @apply relative min-h-screen overflow-x-hidden text-gray-900 bg-white dark:text-white dark:bg-gray-900;
   -ms-overflow-style: none; /* Hide scrollbar in IE */
   scrollbar-width: none; /* Hide scrollbar in Firefox */
 }
@@ -35,7 +35,7 @@ body {
 /* Background styling for the app */
 #app-background {
   @apply fixed inset-0 bg-no-repeat bg-center bg-cover opacity-90 -z-10;
-  background-image: url("/wallpaper.svg"); /* Set the background image */
+  background-image: url('/wallpaper.svg'); /* Set the background image */
 }
 
 /* Hide scrollbars for Webkit browsers */
