--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -13,7 +13,7 @@
   height: 115px;
   width: 115px;
   margin-bottom: 25px;
-  margin-left: 50px; 
+  margin-left: 50px;
 }
 #themeButton {
   margin-right: 200px;
@@ -58,16 +58,16 @@
 }
 
 .play-music-button {
-  background-color: #FFEB3B; 
-  color: #000; 
-  padding: 4px 8px; 
+  background-color: #ffeb3b;
+  color: #000;
+  padding: 4px 8px;
   border-radius: 4px;
   border: none;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
 .play-music-button:hover {
-  background-color: #FDD835; 
+  background-color: #fdd835;
 }
 
 @keyframes shootOffScreen {
@@ -84,7 +84,3 @@
 .shoot-off-screen {
   animation: shootOffScreen 0.5s ease-out forwards;
 }
-
-
-
-
